@@ -11,6 +11,7 @@ allSuites = [
     'SOX:test_suite',
     'uuid:test_suite',
     'test_mockdb:test_suite',
+    'test_mockets:test_suite',
     'test_signature:test_suite',
 ]
 
